--- a/app/src/main/res/layout/content_event_detail.xml
+++ b/app/src/main/res/layout/content_event_detail.xml
@@ -28,7 +28,7 @@
 
             <TextView
                 android:id="@+id/eventName2"
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
@@ -54,7 +54,7 @@
 
             <TextView
                 android:id="@+id/eventDate2"
-                android:layout_width="120dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="January 1"
@@ -68,7 +68,7 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="1:00pm - 2:00pm"
-                android:textAlignment="textStart"
+                android:textAlignment="textEnd"
                 android:textColorHighlight="@color/colorTitleText"
                 app:layout_constraintRight_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eventDate2" />
@@ -84,10 +84,13 @@
             android:layout_weight="10"
             android:text="Lorem ipsum dolor sit amet, eget ligula. In posuere felis a ligula aliquet ultricies. Phasellus placerat quam nisi, convallis facilisis mauris euismod in." />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="30" />
+            android:layout_height="40dp"
+            android:layout_weight="30"
+            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
