--- a/app/src/main/res/layout/content_event_creation.xml
+++ b/app/src/main/res/layout/content_event_creation.xml
@@ -40,14 +40,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Select a date..." />
+            android:text="Select a date..."
+            android:onClick="showDatePickerDialog"/>
 
         <Button
             android:id="@+id/locPicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Select a location..." />
+            android:text="Select a location..."
+            android:onClick="showLocPickerDialog"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,7 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:text="Select a starting time..."
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                android:onClick="showStartTimePickerDialog"/>
 
             <Button
                 android:id="@+id/endTimePicker"
@@ -69,7 +72,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:text="Select an ending time..."
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                android:onClick="showEndTimePickerDialog"/>
         </LinearLayout>
 
         <EditText
@@ -85,7 +89,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:paddingLeft="0dp"
-            android:text="Post it!" />
+            android:text="Post it!"
+            android:onClick="PostIt"/>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
