--- a/app/src/main/res/layout/content_event_detail.xml
+++ b/app/src/main/res/layout/content_event_detail.xml
@@ -86,11 +86,14 @@
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="30"
+            map:cameraZoom="16"
+            map:mapType="normal"
             tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
